--- a/index.html
+++ b/index.html
@@ -47,8 +47,30 @@
 		<script src="app/modules/produtos/controller/produtos.list.controller.js"></script>
 		<script src="app/modules/produtos/controller/produtos.carrinho.controller.js"></script>
 
+		<div class="container centralizarLogin">
+			<form class="form-horizontal" >
+				<div class="form-group">
+					<label class="col-sm-2 control-label">Usuário</label>
+					<div class="col-sm-10">
+						<input type="email" class="form-control"  placeholder="usuario">
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="col-sm-2 control-label">Senha</label>
+					<div class="col-sm-10">
+						<input type="password" class="form-control"  placeholder="senha">
+					</div>
+				</div>
+				<div class="form-actions ">
+					<button type="button"  data-toggle="modal" data-target="#modalCadastro"class="btn btn-danger pull-left">
+						Cadastrar
+					</button>
+					<button type="submit"  class="btn btn-info pull-right">
+						Entrar
+					</button>
+				</div>
+			</form>
+		</div>
 
-		<!--<script src="js/app.js"></script>-->
-		<!--<script src="js/controllers/usuariosController.js"></script>-->
 	</body>
 </html>
