Atualizações na página index.html
Atualizações de css e conteúdo na página index.html.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<script src="app/modules/produtos/controller/produtos.carrinho.controller.js"></script>
 
 		<div class="container centralizarLogin">
-			<form class="form-horizontal" >
+			<form class="form-horizontal" action="app/menuGameplay.html">
 				<div class="form-group">
 					<label class="col-sm-2 control-label">Usuário</label>
 					<div class="col-sm-10">
@@ -65,7 +65,7 @@
 					<button type="button"  data-toggle="modal" data-target="#modalCadastro"class="btn btn-danger pull-left">
 						Cadastrar
 					</button>
-					<button type="submit"  class="btn btn-info pull-right">
+					<button type="submit" class="btn btn-info pull-right">
 						Entrar
 					</button>
 				</div>
