--- a/index.html
+++ b/index.html
@@ -20,14 +20,7 @@
 		<!--Scripts Lib-->
 		<script src="node_modules/angular/angular.js"></script>
 		<script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.10/angular-cookies.js"></script>
-		
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		
-		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-		
+
 		<!--Scripts App-->
 		<script src="app/app.js"></script>
 		<!--Usuarios-->
@@ -45,32 +38,10 @@
 		<script src="app/modules/produtos/services/produtos.service.js"></script>
 		<script src="app/modules/produtos/services/carrinho.service.js"></script>
 		<script src="app/modules/produtos/controller/produtos.list.controller.js"></script>
-		<script src="app/modules/produtos/controller/produtos.carrinho.controller.js"></script>
+		<script src="app/modules/produtos/controller/carrinho.controller.js"></script>
 
-		<div class="container centralizarLogin">
-			<form class="form-horizontal" action="app/menuGameplay.html">
-				<div class="form-group">
-					<label class="col-sm-2 control-label">Usuário</label>
-					<div class="col-sm-10">
-						<input type="email" class="form-control"  placeholder="usuario">
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-2 control-label">Senha</label>
-					<div class="col-sm-10">
-						<input type="password" class="form-control"  placeholder="senha">
-					</div>
-				</div>
-				<div class="form-actions ">
-					<button type="button"  data-toggle="modal" data-target="#modalCadastro"class="btn btn-danger pull-left">
-						Cadastrar
-					</button>
-					<button type="submit" class="btn btn-info pull-right">
-						Entrar
-					</button>
-				</div>
-			</form>
-		</div>
 
+		<!--<script src="js/app.js"></script>-->
+		<!--<script src="js/controllers/usuariosController.js"></script>-->
 	</body>
 </html>
